zebra-state/src/service/finalized_state/disk_format/tests/snapshots/column_family_names.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_names
---
[
  "balance_by_transparent_addr",
  "block_header_by_height",
  "block_info",
  "default",
  "hash_by_height",
  "hash_by_tx_loc",
  "height_by_hash",
  "history_tree",
  "ironwood_anchors",
  "ironwood_note_commitment_subtree",
  "ironwood_note_commitment_tree",
  "ironwood_nullifiers",
  "orchard_anchors",
  "orchard_note_commitment_subtree",
  "orchard_note_commitment_tree",
  "orchard_nullifiers",
  "pruning_metadata",
  "sapling_anchors",
  "sapling_note_commitment_subtree",
  "sapling_note_commitment_tree",
  "sapling_nullifiers",
  "sprout_anchors",
  "sprout_note_commitment_tree",
  "sprout_nullifiers",
  "tip_chain_value_pool",
  "tx_by_loc",
  "tx_loc_by_hash",
  "tx_loc_by_spent_out_loc",
  "tx_loc_by_transparent_addr_loc",
  "utxo_by_out_loc",
  "utxo_loc_by_transparent_addr_loc",
  "zakura_header_body_size_by_height",
  "zakura_header_by_height",
  "zakura_header_hash_by_height",
  "zakura_header_height_by_hash",
]
